--- a/public/fancy_dice.html
+++ b/public/fancy_dice.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Dice Throwing</title>
+	<title>Fancy Dice Throwing</title>
 </head>
 
 <body>
@@ -14,7 +14,6 @@
 	<input type="number" id="num_dices" min="1"/>
 	dices.
 </div>
-</h1>
 
 <script>
 function throw_dice()
