--- a/public/members.html
+++ b/public/members.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Members Mockup</title>
+	<title>Members</title>
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
